harden backend security and modernize runtime